fixed styling for Flights overflow

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -117,6 +117,10 @@ h2 {
     text-align: center;
 }
 
+.table-container {
+    overflow-x: auto;
+}
+
 .masthead {
     position: absolute;
     bottom: 0;
